--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "fparser",
-  "main": "index.html",
+  "main": "fparser.js",
   "version": "1.1.0",
   "description": "A Formula Parser for Javascript",
   "keywords": [
@@ -27,7 +27,5 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.0",
-    "flot": "~0.8.2"
   }
 }
