--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "fparser",
   "version": "1.2.1",
   "description": "A Math Formula parser library for JavaScript",
-  "main": "fparser.js",
+  "main": "dist/fparser.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "docker-shell": "docker run --rm -ti -v \"$PWD\":/usr/src/app -w /usr/src/app node:6 bash",
+    "build": "babel src -d dist",
+    "test": "npm run build && jasmine && karma start"
   },
   "keywords": [
     "javascript",
@@ -25,5 +27,74 @@
   "bugs": {
     "url": "https://github.com/bylexus/fparse/issues"
   },
-  "homepage": "https://github.com/bylexus/fparse"
+  "homepage": "https://github.com/bylexus/fparse",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^5.0.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.1",
+    "jasmine": "^3.1.0",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.4",
+    "karma-jasmine": "^1.1.2",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "prettier": "^1.13.5"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": "prettier",
+    "parserOptions": {
+      "ecmaVersion": 6
+    },
+    "env": {
+      "browser": true,
+      "node": true
+    },
+    "plugins": [
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "singleQuote": true,
+          "tabWidth": 4,
+          "printWidth": 120
+        }
+      ],
+      "no-unused-vars": [
+        "error",
+        {
+          "vars": "all",
+          "args": "none"
+        }
+      ],
+      "semi": [
+        "error",
+        "always"
+      ],
+      "curly": "error",
+      "eqeqeq": "error",
+      "no-eval": "error",
+      "no-loop-func": "error",
+      "radix": "error",
+      "comma-dangle": "error",
+      "no-undef": "error"
+    },
+    "globals": {
+      "describe": false,
+      "it": false,
+      "beforeEach": false,
+      "expect": false
+    }
+  },
+  "prettier": {
+    "printWidth": 120,
+    "tabWidth": 4,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "none"
+  }
 }
