--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,20 @@
 {
     "presets": [
-        ["env", {
-            "targets": {
-                "node": "6.10",
-                    "browsers": ["last 2 versions", "ie >= 11"]
+        [
+            "@babel/preset-env",
+            {
+                "modules": "umd",
+                "targets": {
+                    "node": "12",
+                    "browsers": [
+                        "last 2 versions",
+                        "ie > 11"
+                    ]
+                }
             }
-        }]
+        ]
+    ],
+    "plugins": [
+        "add-module-exports"
     ]
 }
