--- a/.github/workflows/develop-build.yml
+++ b/.github/workflows/develop-build.yml
@@ -8,6 +8,9 @@ on:
     branches: [ develop ]
   pull_request:
     branches: [ develop ]
+  workflow_dispatch:
+    branches: [ develop ]
+
 
 jobs:
   build:
