Added memoization support

--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
             "describe": false,
             "it": false,
             "beforeEach": false,
-            "expect": false
+            "expect": false,
+            "spyOn": false
         }
     },
     "prettier": {
