--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fparser",
-    "version": "1.3.0",
+    "version": "2.0.0",
     "description": "A Math Formula parser library for JavaScript",
     "main": "dist/fparser.js",
     "module": "src/fparser.js",
@@ -32,7 +32,7 @@
     "bugs": {
         "url": "https://github.com/bylexus/fparse/issues"
     },
-    "homepage": "https://github.com/bylexus/fparse",
+    "homepage": "https://fparse.alexi.ch/",
     "devDependencies": {
         "@babel/core": "^7.14.2",
         "@babel/preset-env": "^7.14.2",
