Upgrading libraries and build infrastructure
Updates all npm packages
Demo page needs overhaul, too: it uses the old vue-cli infrastructure, which need to be replaced.

--- a/.babelrc
+++ b/.babelrc
@@ -5,10 +5,9 @@
             {
                 "modules": "umd",
                 "targets": {
-                    "node": "12",
+                    "node": "14",
                     "browsers": [
-                        "last 2 versions",
-                        "ie > 11"
+                        "last 2 versions"
                     ]
                 }
             }
