Fixing 'main' entry in package.json
It was set to the source file 'src/fparser.ts' instead of the dist file 'dist/fparser.js'.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A Math Formula parser library for JavaScript",
     "main": "dist/fparser.js",
     "type": "module",
-    "module": "src/fparser.ts",
+    "module": "dist/fparser.js",
     "files": [
         "dist/"
     ],
