Hopefully fixing github build action problem
It seems that an npm issue causes build problems related to a divergence
in node_modules and package-lock.json:

https://github.com/npm/cli/issues/4828

I hope this change will fix this.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
+    - run: rm -rf node_modules package-lock.json
+    - run: npm install
     - run: npm run build
     - run: npm test
