using chromium for tests - and update Dockerfile accordingly

--- a/.github/workflows/develop-build.yml
+++ b/.github/workflows/develop-build.yml
@@ -22,6 +22,8 @@ jobs:
         node-version: [20.x, 22.x, 24.x]
 
     steps:
+    - name: Install needed os packages
+      run: sudo apt install chromium
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
